--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,16 @@
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
-body {
+:host {
+    display: block;
     padding-top: 3.5rem;
   }
   
+  .userimg {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    margin: -5px 0px -5px 0px;
+  }
