--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,30 +16,30 @@
     <!-- Example row of columns -->
     <div class="row">
       <div class="col-md-4">
-        <h2>Heading</h2>
+        <h2>Cats</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
           nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
         </p>
         <p>
-          <a class="btn btn-secondary" routerLink="/videos" role="button">Videos &raquo;</a>
+          <a class="btn btn-secondary" routerLink="/color/videos/cats" role="button">Videos &raquo;</a>
         </p>
       </div>
       <div class="col-md-4">
-        <h2>Heading</h2>
+        <h2>Gerbils</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
           nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
         </p>
         <p>
-          <a class="btn btn-secondary" routerLink="/videos" role="button">Videos &raquo;</a>
+          <a class="btn btn-secondary" routerLink="/color/videos/gerbils" role="button">Videos &raquo;</a>
         </p>
       </div>
       <div class="col-md-4">
-        <h2>Heading</h2>
+        <h2>How-To</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
           euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
           sit amet risus.</p>
         <p>
-          <a class="btn btn-secondary" routerLink="/videos" role="button">Videos &raquo;</a>
+          <a class="btn btn-secondary" routerLink="/black_and_white/videos/how-to" role="button">Videos &raquo;</a>
         </p>
       </div>
     </div>
